--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNSp0PELs/MTu3HToWblQk",
+      "authorship_tag": "ABX9TyMuO6Nlrc0nU126HgK1LgnR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,29 +29,44 @@
       "metadata": {
         "id": "YTqI2zLFPouc",
         "colab_type": "code",
+        "outputId": "ff5a0182-9633-4d32-d2af-1e4d26e94803",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
-        },
-        "outputId": "bdafbc77-86f6-4bb7-a738-77d8f9364d71"
+          "height": 445
+        }
       },
       "source": [
         "# !pip install elasticsearch\n",
         "# !pip install elasticsearch-dsl\n",
         "# !pip install pymed"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Collecting elasticsearch\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cc/cf/7973ac58090b960857da04add0b345415bf1e1741beddf4cbe136b8ad174/elasticsearch-7.6.0-py2.py3-none-any.whl (88kB)\n",
+            "\r\u001b[K     |███▊                            | 10kB 16.1MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |███████████                     | 30kB 2.2MB/s eta 0:00:01\r\u001b[K     |██████████████▉                 | 40kB 2.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 51kB 1.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████▏         | 61kB 2.2MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 71kB 2.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▋  | 81kB 2.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 92kB 2.4MB/s \n",
+            "\u001b[?25hRequirement already satisfied: urllib3>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from elasticsearch) (1.24.3)\n",
+            "Installing collected packages: elasticsearch\n",
+            "Successfully installed elasticsearch-7.6.0\n",
+            "Collecting elasticsearch-dsl\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/07/46/b03326c44aa9693b7879d17fce42fa412470e43cf6035e8addfc5af634c6/elasticsearch_dsl-7.1.0-py2.py3-none-any.whl (53kB)\n",
+            "\u001b[K     |████████████████████████████████| 61kB 1.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from elasticsearch-dsl) (2.8.1)\n",
+            "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /usr/local/lib/python3.6/dist-packages (from elasticsearch-dsl) (7.6.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from elasticsearch-dsl) (1.12.0)\n",
+            "Requirement already satisfied: urllib3>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch-dsl) (1.24.3)\n",
+            "Installing collected packages: elasticsearch-dsl\n",
+            "Successfully installed elasticsearch-dsl-7.1.0\n",
             "Collecting pymed\n",
             "  Downloading https://files.pythonhosted.org/packages/56/c3/0a260bd7b8e2d021097954accefb749f13e8fbd6b673293d33eac0905174/pymed-0.8.9-py3-none-any.whl\n",
             "Requirement already satisfied: requests>=2.20.0 in /usr/local/lib/python3.6/dist-packages (from pymed) (2.21.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (2020.4.5.1)\n",
             "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (1.24.3)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (3.0.4)\n",
             "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (2.8)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (2020.4.5.1)\n",
             "Installing collected packages: pymed\n",
             "Successfully installed pymed-0.8.9\n"
           ],
@@ -64,11 +79,11 @@
       "metadata": {
         "id": "cAW59VYVLUIJ",
         "colab_type": "code",
+        "outputId": "575cefe7-c5fa-47a7-9754-0f17614a117c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "446f20c4-a279-4367-840e-1b6405dffc2c"
+        }
       },
       "source": [
         "import os, urllib, glob, sys\n",
@@ -99,11 +114,11 @@
       "metadata": {
         "id": "5Ak0TlMxLVQN",
         "colab_type": "code",
+        "outputId": "5a6a5b69-ff39-4146-e29f-633ed0a360ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "636f0d9d-16db-47a8-b017-e8a99093cce7"
+        }
       },
       "source": [
         "%cd ./AYP/code"
@@ -141,12 +156,10 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns; sns.set()\n",
         "\n",
-        "from yuval_module import paper_clusterer\n",
-        "importlib.reload(paper_clusterer)\n",
-        "\n",
-        "import yuval_module.paper_source\n",
-        "importlib.reload(yuval_module.paper_source)\n",
+        "from yuval_module.paper_clusterer import PaperClusterer\n",
         "from yuval_module.paper_source import PaperSource\n",
+        "\n",
+        "\n",
         "\n",
         "from sklearn.linear_model import LogisticRegression as LR\n",
         "\n",
@@ -182,11 +195,11 @@
       "metadata": {
         "id": "mXco2o4kQK-9",
         "colab_type": "code",
+        "outputId": "af615845-77f1-450f-8401-83d87aa27457",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        },
-        "outputId": "e545e3cc-760b-4767-dd41-ee3daee96da1"
+        }
       },
       "source": [
         "ps = load_dataset('mini')\n",
@@ -194,7 +207,7 @@
         "\n",
         "df.head(5)"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +363,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -359,19 +372,18 @@
       "metadata": {
         "id": "UFC0IXeRQPrY",
         "colab_type": "code",
+        "outputId": "6db3b757-42d4-4075-d2f0-bf1dbaed359a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        },
-        "outputId": "f5b7e310-3d0b-4331-9a2d-c7427af0a0f2"
+        }
       },
       "source": [
-        "#Finding a unqiue author and getting his papers.\n",
-        "\n",
+        "#Finding a unique author and getting his papers.\n",
         "indie_authors = df.groupby('last_author_name')[\"PI_IDS\"].nunique().index\n",
         "df[df['last_author_name'].isin(indie_authors)].groupby('last_author_name')['pmid'].nunique().sort_values(ascending=False)"
       ],
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +407,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 9
         }
       ]
     },
@@ -404,11 +416,11 @@
       "metadata": {
         "id": "OFlg0nLvVrpZ",
         "colab_type": "code",
+        "outputId": "2e29e3c0-25e4-4ffc-bdc4-0b4a36ee2891",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 370
-        },
-        "outputId": "dc0aecd2-0be8-4dfb-b76e-464c8dae43b2"
+          "height": 1000
+        }
       },
       "source": [
         "def get_clusters(ps,author):\n",
@@ -420,26 +432,71 @@
         "\n",
         "similarity_matrix = get_clusters(ps,'Madabhushi, A')"
       ],
-      "execution_count": 37,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "author_papers_df affiliation:\n",
+            "         pmid last_author_name                             last_author_inst\n",
+            "989  29371120    Madabhushi, A              Case Western Reserve University\n",
+            "995  30561278    Madabhushi, A              Case Western Reserve University\n",
+            "994  29959421    Madabhushi, A              Case Western Reserve University\n",
+            "993  29614076    Madabhushi, A              Case Western Reserve University\n",
+            "992  30201760    Madabhushi, A              Case Western Reserve University\n",
+            "991  29848291    Madabhushi, A              Case Western Reserve University\n",
+            "990  30169514    Madabhushi, A              Case Western Reserve University\n",
+            "996  30327507    Madabhushi, A              Case Western Reserve University\n",
+            "997  29721515    Madabhushi, A              Case Western Reserve University\n",
+            "987  29469937    Madabhushi, A              Case Western Reserve University\n",
+            "986  30297720    Madabhushi, A              Case Western Reserve University\n",
+            "5    25466771    Madabhushi, A              Case Western Reserve University\n",
+            "4    25993029    Madabhushi, A              Case Western Reserve University\n",
+            "3    25958195    Madabhushi, A              Case Western Reserve University\n",
+            "2    26870745    Madabhushi, A              Case Western Reserve University\n",
+            "988  29734484    Madabhushi, A              Case Western Reserve University\n",
+            "1    26167385    Madabhushi, A  Rutgers, The State University of New Jersey\n",
+            "0    19810465    Madabhushi, A                                         None\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "/usr/local/lib/python3.6/dist-packages/smart_open/smart_open_lib.py:253: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
-            "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
+            "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n",
+            "/content/AYP/code/yuval_module/paper_clusterer.py:59: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  author_papers_df['last_author_forename']=author_papers_df['authors'].apply(lambda x: self.fetch_forename(x))\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:845: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self.obj[key] = _infer_fill_value(value)\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:966: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self.obj[item] = s\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-897e7ffff958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msimilarity_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Madabhushi, A'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-37-897e7ffff958>\u001b[0m in \u001b[0;36mget_clusters\u001b[0;34m(ps, author)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mpaper_clusterer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPaperClusterer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.27\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m#get dist matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpaper_clusterer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dist_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauthor_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: get_dist_matrix() takes 2 positional arguments but 3 were given"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-897e7ffff958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msimilarity_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Madabhushi, A'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-12-897e7ffff958>\u001b[0m in \u001b[0;36mget_clusters\u001b[0;34m(ps, author)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mpaper_clusterer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPaperClusterer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.27\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;31m#get dist matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpaper_clusterer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dist_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauthor_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/AYP/code/yuval_module/paper_clusterer.py\u001b[0m in \u001b[0;36mget_dist_matrix\u001b[0;34m(self, author_papers_df, just_sim_matrix_flag)\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauthor_papers_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"pmid\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"last_author_name\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"last_author_inst\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mjust_sim_matrix_flag\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocess_feautures_to_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauthors_papers_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m             \u001b[0mcombined_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfor_clustering_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcombined_sim\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocess_features_to_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mauthor_papers_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"***\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'PaperClusterer' object has no attribute 'process_feautures_to_dist'"
           ]
         }
       ]
