--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTJEL1SpZKHsxSwUEBU+4n",
+      "authorship_tag": "ABX9TyN8lpdkdW/WRbagYK9FQwTB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,8 @@
         "\n",
         "\n",
         "\n",
-        "from sklearn.linear_model import LogisticRegression as LR\n",
+        "from sklearn.linear_model import LogisticRegression as LogR\n",
+        "from sklearn.linear_model import LinearRegression as LinR\n",
         "\n",
         "%matplotlib inline"
       ],
@@ -941,20 +942,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         },
-        "outputId": "4bac74cd-0624-4782-de67-41fdd6940ef8"
+        "outputId": "0127174c-afe0-4e50-c053-219e36d2a1b9"
       },
       "source": [
         "lr_model = LR(penalty='l2',max_iter=1000,random_state=42)#, solver='saga', l1_ratio = 0.5)\n",
         "lr_model.fit(X_train,y_train);\n",
-        "\n",
+        "print(lr_model.predict(X_test)[:5])\n",
         "#train LR with 0- same author 1- dif author\n",
         "lr_model.score(X_test,y_test)\n",
         "#test on normalized test data"
       ],
-      "execution_count": 169,
+      "execution_count": 170,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 0 1 1 1]\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -965,7 +973,39 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 169
+          "execution_count": 170
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dwdvo4fOCSK2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8d2527a6-5b7b-4f85-fcbb-e414dc8323af"
+      },
+      "source": [
+        "lin_model = LinR()\n",
+        "lin_model.fit(X_train,y_train)\n",
+        "lin_model.score(X_test,y_test)"
+      ],
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.10110132894939816"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 173
         }
       ]
     }
