--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -1,17 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "1_Getting_Labeled_Data.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -59,11 +46,12 @@
         "import os, zipfile, glob\n",
         "from getpass import getpass\n",
         "import urllib\n",
+        "import s3_functions\n",
         "\n",
-        "PATH = \"./data/labeled_dataset/source_files/\"\n",
-        "PATH2 = \"./data/labeled_dataset/\""
+        "INPUT_PATH = \"C:/Users/shaul/Documents/GitHub/academix-ydata-project/data/labeled_dataset/source_files/\"\n",
+        "OUTPUT_PATH = \"C:/Users/shaul/Documents/GitHub/academix-ydata-project/data/labeled_dataset/source_files_merged/\""
       ],
-      "execution_count": 0,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -78,13 +66,15 @@
         }
       },
       "source": [
-        "user = input('User name: ')\n",
-        "password = getpass('Password: ')\n",
-        "password = urllib.parse.quote(password) # your password is converted into url format\n",
-        "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
+        "# user = input('User name: ')\n",
+        "# password = getpass('Password: ')\n",
+        "# password = urllib.parse.quote(password) # your password is converted into url format\n",
+        "# cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
         "\n",
-        "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\" # removing the password from the variable"
+        "# os.system(cmd_string)\n",
+        "# cmd_string, password = \"\", \"\" # removing the password from the variable\n",
+        "\n",
+        "# %cd /content/AYP"
       ],
       "execution_count": 0,
       "outputs": [
@@ -93,56 +83,6 @@
           "text": [
             "User name: ShaulSolomon\n",
             "Password: ··········\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1voj-ngzFZnL",
-        "colab_type": "code",
-        "outputId": "9ea8448e-4847-4bce-fe57-7aaae4b4d88d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "%cd /content/AYP"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mD_iOy2iFDzp",
-        "colab_type": "code",
-        "outputId": "5dc2f43d-186b-471e-948d-4cdedc97dde7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "!pwd"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP\n"
           ],
           "name": "stdout"
         }
@@ -184,15 +124,17 @@
         "colab": {}
       },
       "source": [
+        "# Unzip all the files within the local folder\n",
+        "\n",
         "extension = \".zip\"\n",
         "\n",
-        "for item in os.listdir(PATH): # loop through items in dir\n",
+        "for item in os.listdir(INPUT_PATH): # loop through items in dir\n",
         "    if item.endswith(extension): # check for \".zip\" extension\n",
-        "        zip_ref = zipfile.ZipFile(PATH + item) # create zipfile object\n",
+        "        zip_ref = zipfile.ZipFile(INPUT_PATH + item) # create zipfile object\n",
         "        zip_ref.extractall(PATH) # extract file to dir\n",
         "        zip_ref.close() # close file"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -207,8 +149,10 @@
         }
       },
       "source": [
-        "link_files = glob.glob(PATH + \"RePORTER_PUBLNK_C_20*.csv\")\n",
-        "prj_files = glob.glob(PATH + \"RePORTER_PRJ_C_FY20*.csv\")\n",
+        "#Iterating through the unzipped files, combine them into a single dataframe and then merge them.\n",
+        "\n",
+        "link_files = glob.glob(INPUT_PATH + \"RePORTER_PUBLNK_C_20*.csv\")\n",
+        "prj_files = glob.glob(INPUT_PATH + \"RePORTER_PRJ_C_FY20*.csv\")\n",
         "\n",
         "lf=[]\n",
         "prjf = []\n",
@@ -222,9 +166,9 @@
         "\n",
         "print('\\n----------------------\\n')\n",
         "\n",
-        "print(\"loading PRJ files...\")\n",
+        "print(\"loading PRJ files (taking ['CORE_PROJECT_NUM','FY','PI_IDS', 'PI_NAMEs', 'ORG_STATE'] )...\")\n",
         "for filename in prj_files:\n",
-        "    df = pd.read_csv(filename, index_col=None, header=0,encoding = 'ISO-8859-1', usecols=[\"CORE_PROJECT_NUM\",\"FY\",\"PI_IDS\", \"PI_NAMEs\"] )\n",
+        "    df = pd.read_csv(filename, index_col=None, header=0,encoding = 'ISO-8859-1', usecols=[\"CORE_PROJECT_NUM\",\"FY\",\"PI_IDS\", \"PI_NAMEs\", \"ORG_STATE\"] )\n",
         "    prjf.append(df)\n",
         "prjf_total = pd.concat(prjf, axis=0, ignore_index=True)\n",
         "prjf_total = prjf_total.rename(columns = {'CORE_PROJECT_NUM':'PROJECT_NUMBER'})\n",
@@ -237,48 +181,14 @@
         "df = pd.merge(lf_total, prjf_total, how='inner', on ='PROJECT_NUMBER')\n",
         "print(df.head(10))\n",
         "\n",
-        "df.to_csv(PATH2 + 'NIH_precleaning.csv',encoding='utf-8')\n",
-        "pd.Series(pd.unique(df.PMID)).to_csv(PATH2 + 'unique_pmid_no_dup.csv', encoding='utf-8', header=False)"
+        "df.to_csv(OUTPUT_PATH + 'NIH_precleaning.csv',encoding='utf-8')"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
-          "text": [
-            "loading PUBLINK files...\n",
-            "       PMID PROJECT_NUMBER\n",
-            "0  19415686    ZIAAR041131\n",
-            "1  19387461    ZIADK054511\n",
-            "2  19936044    ZIAAI000361\n",
-            "3  19783984    ZIANS002945\n",
-            "4  19281132    ZIAES102225\n",
-            "\n",
-            "----------------------\n",
-            "\n",
-            "loading PRJ files...\n",
-            "  PROJECT_NUMBER    FY     PI_IDS            PI_NAMEs\n",
-            "0    T32EY021451  2015  8012522;       LEE, HONGZHE ;\n",
-            "1    R03HD079716  2015  1910307;     CLARK, ROBERT F;\n",
-            "2    R37HD045022  2015  1859452;   JAENISCH, RUDOLF ;\n",
-            "3    U59EH000524  2015  9123789;      GOLDMAN, DONA ;\n",
-            "4    F32AI114190  2015  8964511;   BOTTS, MICHAEL R.;\n",
-            "\n",
-            "----------------------\n",
-            "\n",
-            "merging the dataframes...\n",
-            "       PMID PROJECT_NUMBER    FY     PI_IDS         PI_NAMEs\n",
-            "0  19415686    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "1  19650110    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "2  19283731    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "3  19274753    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "4  19479830    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "5  19597468    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "6  19107653    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "7  19170141    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "8  19415687    ZIAAR041131  2009   1858712;   TUAN, ROCKY S;\n",
-            "9  19387461    ZIADK054511  2015  6480761;   LIANG, T. JAKE;\n"
-          ],
-          "name": "stdout"
+          "name": "stdout",
+          "text": "loading PUBLINK files...\n       PMID PROJECT_NUMBER\n0  19415686    ZIAAR041131\n1  19387461    ZIADK054511\n2  19936044    ZIAAI000361\n3  19783984    ZIANS002945\n4  19281132    ZIAES102225\n\n----------------------\n\nloading PRJ files...\n      PROJECT_NUMBER    FY ORG_STATE    PI_IDS             PI_NAMEs\n0  197NICS228-10-0-1  2009        MD         ;                  , ;\n1        C06RR020539  2009        CA  1859426;        PARK, NO-HEE;\n2        C06RR020540  2009        ME  1864471;     FORREST, JOHN N;\n3        C06RR020555  2009        VA  1889505;  MACRINA, FRANCIS L;\n4        C06RR020559  2009        NY  1961084;  MOORE, HOLLY MARIE;\n\n----------------------\n\nmerging the dataframes...\n       PMID PROJECT_NUMBER    FY ORG_STATE    PI_IDS         PI_NAMEs\n0  19415686    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n1  19650110    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n2  19283731    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n3  19274753    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n4  19479830    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n5  19597468    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n6  19107653    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n7  19170141    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n8  19415687    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n9  19387461    ZIADK054511  2009       NaN  9415738;  LIANG, T. JAKE;\n"
         }
       ]
     },
@@ -294,27 +204,34 @@
         }
       },
       "source": [
-        "df.groupby('FY')['PMID'].nunique()"
+        "f = open(OUTPUT_PATH + 'NIH_precleaning.csv', 'r+')\n",
+        "s3_functions.upload_to_s3(file = f,key = \"NIH_precleaning.csv\")\n",
+        "f.close()"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "FY\n",
-              "2009    195241\n",
-              "2015    200104\n",
-              "2018    162931\n",
-              "Name: PMID, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 57
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-28-80c52c32f2ef>, line 1)",
+          "traceback": [
+            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-28-80c52c32f2ef>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    f = open('C:\\Users\\shaul\\Documents\\GitHub\\academix-ydata-project\\data\\labeled_dataset\\source_files_merged\\NIH_precleaning.csv', 'r+')\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+          ]
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "1_Getting_Labeled_Data.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
