--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "1_Getting_Labeled_Data.ipynb",
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -43,15 +57,14 @@
         "''' Initializations '''\n",
         "\n",
         "import pandas as pd\n",
-        "import os, zipfile, glob\n",
-        "from getpass import getpass\n",
-        "import urllib\n",
+        "sys.path.append('./code')\n",
         "import s3_functions\n",
+        "import zipfile, glob, sys\n",
         "\n",
-        "INPUT_PATH = \"C:/Users/shaul/Documents/GitHub/academix-ydata-project/data/labeled_dataset/source_files/\"\n",
-        "OUTPUT_PATH = \"C:/Users/shaul/Documents/GitHub/academix-ydata-project/data/labeled_dataset/source_files_merged/\""
+        "INPUT_PATH = \"data/labeled_dataset/source_files/\"\n",
+        "OUTPUT_PATH = \"data/labeled_dataset/source_files/\""
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -59,13 +72,17 @@
       "metadata": {
         "id": "eIJe_bmId-yY",
         "colab_type": "code",
-        "outputId": "f9713635-0613-42a5-8956-02f84013ce9d",
+        "outputId": "36944959-330a-413c-8bcb-1a72f2eb7471",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         }
       },
       "source": [
+        "# import os\n",
+        "# from getpass import getpass\n",
+        "# import urllib\n",
+        "\n",
         "# user = input('User name: ')\n",
         "# password = getpass('Password: ')\n",
         "# password = urllib.parse.quote(password) # your password is converted into url format\n",
@@ -76,13 +93,14 @@
         "\n",
         "# %cd /content/AYP"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "User name: ShaulSolomon\n",
-            "Password: ··········\n"
+            "Password: ··········\n",
+            "/content/AYP\n"
           ],
           "name": "stdout"
         }
@@ -131,10 +149,10 @@
         "for item in os.listdir(INPUT_PATH): # loop through items in dir\n",
         "    if item.endswith(extension): # check for \".zip\" extension\n",
         "        zip_ref = zipfile.ZipFile(INPUT_PATH + item) # create zipfile object\n",
-        "        zip_ref.extractall(PATH) # extract file to dir\n",
+        "        zip_ref.extractall(INPUT_PATH) # extract file to dir\n",
         "        zip_ref.close() # close file"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -142,10 +160,10 @@
       "metadata": {
         "id": "0VulUjqzsa8X",
         "colab_type": "code",
-        "outputId": "26fc00b7-e75a-48b8-8c0e-c214e62d60a0",
+        "outputId": "0f8df680-b728-4d8c-9ceb-5adcfb755118",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 561
+          "height": 629
         }
       },
       "source": [
@@ -183,12 +201,49 @@
         "\n",
         "df.to_csv(OUTPUT_PATH + 'NIH_precleaning.csv',encoding='utf-8')"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "loading PUBLINK files...\n       PMID PROJECT_NUMBER\n0  19415686    ZIAAR041131\n1  19387461    ZIADK054511\n2  19936044    ZIAAI000361\n3  19783984    ZIANS002945\n4  19281132    ZIAES102225\n\n----------------------\n\nloading PRJ files...\n      PROJECT_NUMBER    FY ORG_STATE    PI_IDS             PI_NAMEs\n0  197NICS228-10-0-1  2009        MD         ;                  , ;\n1        C06RR020539  2009        CA  1859426;        PARK, NO-HEE;\n2        C06RR020540  2009        ME  1864471;     FORREST, JOHN N;\n3        C06RR020555  2009        VA  1889505;  MACRINA, FRANCIS L;\n4        C06RR020559  2009        NY  1961084;  MOORE, HOLLY MARIE;\n\n----------------------\n\nmerging the dataframes...\n       PMID PROJECT_NUMBER    FY ORG_STATE    PI_IDS         PI_NAMEs\n0  19415686    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n1  19650110    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n2  19283731    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n3  19274753    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n4  19479830    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n5  19597468    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n6  19107653    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n7  19170141    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n8  19415687    ZIAAR041131  2009       NaN  1858712;   TUAN, ROCKY S;\n9  19387461    ZIADK054511  2009       NaN  9415738;  LIANG, T. JAKE;\n"
+          "text": [
+            "loading PUBLINK files...\n",
+            "       PMID PROJECT_NUMBER\n",
+            "0  25782559    U01CI000333\n",
+            "1  26267390    R01DA007031\n",
+            "2  26359696    UL1TR000448\n",
+            "3  26547523    R01HS017939\n",
+            "4  26547523    R01LM010031\n",
+            "\n",
+            "----------------------\n",
+            "\n",
+            "loading PRJ files (taking ['CORE_PROJECT_NUM','FY','PI_IDS', 'PI_NAMEs', 'ORG_STATE'] )...\n",
+            "  PROJECT_NUMBER  ...                                           PI_NAMEs\n",
+            "0    K99HL138160  ...                                 MOROTTI, STEFANO ;\n",
+            "1    K01HS025474  ...                                GIARDINA, TRABER L;\n",
+            "2    U01ES026130  ...  BRODY, JULIA GREEN; CORVALAN, CAMILA ; MICHELS...\n",
+            "3    K08DK106427  ...                                   EIRIN, ALFONSO ;\n",
+            "4    R01HL141379  ...                                  CARLESSO, NADIA ;\n",
+            "\n",
+            "[5 rows x 5 columns]\n",
+            "\n",
+            "----------------------\n",
+            "\n",
+            "merging the dataframes...\n",
+            "       PMID PROJECT_NUMBER  ...     PI_IDS                    PI_NAMEs\n",
+            "0  25782559    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "1  19803722    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "2  19335165    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
+            "3  26267390    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
+            "4  26267390    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
+            "5  30280443    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
+            "6  30280443    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
+            "7  28013420    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
+            "8  28013420    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
+            "9  27350097    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
+            "\n",
+            "[10 rows x 6 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -197,41 +252,15 @@
       "metadata": {
         "id": "-2E68bnQT070",
         "colab_type": "code",
-        "outputId": "1cdd4a50-5df0-40ad-b956-5566c7e73531",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        }
+        "colab": {}
       },
       "source": [
         "f = open(OUTPUT_PATH + 'NIH_precleaning.csv', 'r+')\n",
         "s3_functions.upload_to_s3(file = f,key = \"NIH_precleaning.csv\")\n",
         "f.close()"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-28-80c52c32f2ef>, line 1)",
-          "traceback": [
-            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-28-80c52c32f2ef>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    f = open('C:\\Users\\shaul\\Documents\\GitHub\\academix-ydata-project\\data\\labeled_dataset\\source_files_merged\\NIH_precleaning.csv', 'r+')\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "name": "1_Getting_Labeled_Data.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
